# salary-prediction

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  dvc.yaml  main.py  pyproject.toml  requirements.txt  requirements_app.txt  setup.py  tmp.json  tmp_datasets.txt  tmp_nb.py  tmp_nb.txt
.github/workflows/: docker_build.yml  ml_pipeline.yml
config/: config.yaml  params.yaml
k8s/: deployment.yaml  service.yaml
src/: __init__.py  data_ingestion.py  data_preprocessing.py  data_validation.py  model_evaluation.py  model_registration.py  model_server.py  model_training.py
static/: app.js  style.css
templates/: index.html
utils/: __init__.py  logger.py
wandb/run-20260314_114551-fsa1cw8k/: run-fsa1cw8k.wandb
wandb/run-20260314_114551-fsa1cw8k/files/: config.yaml  requirements.txt  wandb-metadata.json
