[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "salary_prediction"
version = "0.1.0"
description = "MLOps pipeline for AI salary prediction"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "utils*"]
